# kedro-datasentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: all-checks.yml  create-release.yml  rw-lint.yml  rw-unit-tests.yml
kedro_datasentinel/: core.py  utils.py
kedro_datasentinel/config/: __init__.py  data_validation.py  datasentinel.py
kedro_datasentinel/framework/cli/: cli.py  cli_utils.py
kedro_datasentinel/framework/hooks/: datasentinel_hooks.py  kedro_audit_row.py
kedro_datasentinel/template/: datasentinel.yml
scripts/gh_actions/: extract_release_notes.py  extract_release_version.py
tests/: conftest.py  test_utils.py
tests/config/: test_data_sentinel_session.py  test_data_validation.py
tests/framework/cli/: test_cli.py
tests/framework/hooks/: test_audit_logging.py  test_online_validations.py  test_session_creation.py
